--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,13 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+// Novos Estilos
+.text-primary {
+  color: var( --ion-color-primary ) !important;
+}
+
+.noticia-source-name {
+  font-size: 12px;
+  color: lightgray;
+}
