--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,9 +1,19 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header no-border>
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab Two
+      Categorias
     </ion-title>
   </ion-toolbar>
+
+  <ion-segment scrollable mode="md" color="primary">
+    <ion-segment-button *ngFor="let categoria of categorias"
+                        mode="md" 
+                        [value]="categoria">
+      <ion-label text-capitalize>{{ categoria }}</ion-label>
+    </ion-segment-button>
+  </ion-segment>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content color="dark">
+
+</ion-content>
