--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -5,7 +5,11 @@
     </ion-title>
   </ion-toolbar>
 
-  <ion-segment scrollable mode="md" color="primary">
+  <ion-segment scrollable 
+               mode="md" 
+               color="primary"
+               (ionChange)="alterarCategoria($event)">
+               
     <ion-segment-button *ngFor="let categoria of categorias"
                         mode="md" 
                         [value]="categoria">
@@ -15,5 +19,5 @@
 </ion-header>
 
 <ion-content color="dark">
-
+  <app-noticias [noticias]="noticias"></app-noticias>
 </ion-content>
