--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -4,9 +4,11 @@
       <span class="text-primary">{{ index + 1 }}. </span>
       <span class="noticia-source-name">{{ noticia.source.name }}</span>
     </ion-card-subtitle>
-    <ion-card-title>{{ noticia.title }}</ion-card-title>
+    <ion-card-title (click)="abrirNoticia()">{{ noticia.title }}</ion-card-title>
   </ion-card-header>
-  <ion-img *ngIf="noticia.urlToImage" [src]="noticia.urlToImage"></ion-img>
+  <ion-img *ngIf="noticia.urlToImage" 
+           (click)="abrirNoticia()" 
+           [src]="noticia.urlToImage"></ion-img>
   <ion-card-content>
     <p>{{ noticia.description }}</p>
   </ion-card-content>
