Adicionado mensagem para quando não há Favoritos

--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -7,5 +7,12 @@
 </ion-header>
 
 <ion-content color="dark">
-  <app-noticias [noticias]="datalocalService.noticias"></app-noticias>
+  <ion-slides [options]="sliderOpts"
+              *ngIf="datalocalService.noticias.length === 0">
+    <ion-slide>
+      <ion-label>Não há favoritos!</ion-label>
+    </ion-slide>
+  </ion-slides>
+  <app-noticias *ngIf="datalocalService.noticias.length > 0"
+                [noticias]="datalocalService.noticias"></app-noticias>
 </ion-content>
