Adicionado botão de Remover Favorito

--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -14,5 +14,6 @@
     </ion-slide>
   </ion-slides>
   <app-noticias *ngIf="datalocalService.noticias.length > 0"
+                [emFavoritos]="true"
                 [noticias]="datalocalService.noticias"></app-noticias>
 </ion-content>
