--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -1,7 +1,7 @@
 <ion-card color="dark">
   <ion-card-header>
     <ion-card-subtitle>
-      <span class="text-primary">{{ index + 1 }}. </span>
+      <span class="text-primary">{{ index + 1 }}. {{ emFavoritos }}</span>
       <span class="noticia-source-name">{{ noticia.source.name }}</span>
 
       <div class="noticia-more">
