--- a/src/app/components/noticias/noticias.component.html
+++ b/src/app/components/noticias/noticias.component.html
@@ -1,7 +1,9 @@
 <ion-grid fixed>
   <ion-row>
     <ion-col *ngFor="let noticia of noticias; let i = index" size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12">
-      <app-noticia [noticia]="noticia" [index]="i"></app-noticia>
+      <app-noticia [noticia]="noticia" 
+                   [emFavoritos]="emFavoritos"
+                   [index]="i"></app-noticia>
     </ion-col>
   </ion-row>
 </ion-grid>
